# pybacklog

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: ci.yml
examples/: project_activities.py  project_activities2.py  readme.py  readme2.py
pybacklog/: __init__.py
tests/: __init__.py
