[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybacklog"
version = "0.1.8"
description = "Backlog API v2 Client"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Toshiaki Baba", email = "toshiaki@netmark.jp" }
]
urls = { "Homepage" = "https://github.com/netmarkjp/pybacklog" }
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities"
]
requires-python = ">=3.11, <3.15"

dependencies = [
  "requests >=2.12.4,<3.0"
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "ruff>=0.14.6",
]

[tool.uv]
# Additional uv-specific configurations can be added here.

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W"]
ignore = []  # Add specific error codes to ignore if needed
exclude = [".venv", "build", "dist"]
